# startleft

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  bats_test_map.yaml  bats_test_otm.otm  bats_test_source.json  bats_test_source.tf  bats_test_source.xml  bitbucket-pipelines.yml  index.html  mkdocs.yml  pyproject.toml  run_tests.py  setup.cfg  setup.py  sitemap.xml  tmp_upgrade_vulnerable_os_dependencies.txt  tox.ini
About/: index.html
Open-Threat-Model-(OTM)/: index.html
Quickstart-Guide-for-Beginners/: index.html
Troubleshooting/: index.html
Versioning/: index.html
_sl_build/: __init__.py  globals.py  module_importer.py  modules.py  secure_importer.py
cli_tests/: test_parse.bats  test_search.bats  test_validate.bats
deployment/: Dockerfile.application  Dockerfile.docs  Dockerfile.documentation  docker-compose.yml
docs/: About.md  Open-Threat-Model-(OTM).md  Quickstart-Guide-for-Beginners.md  Troubleshooting.md  Versioning.md  index.md  requirements.txt
examples/: paths.py
otm/: __init__.py
search/: search_index.json
sl_util/: __init__.py
slp_abacus/: __init__.py
slp_base/: __init__.py
slp_cft/: __init__.py
slp_drawio/: __init__.py
slp_mtmt/: __init__.py
slp_tf/: __init__.py
slp_tfplan/: __init__.py
slp_visio/: __init__.py  diagram_parser.py  diagram_pruner.py  visio_diagram_factories.py  visio_loader.py  visio_mapping_file_validator.py  visio_parser.py  visio_processor.py  vsdx_parser.py
startleft/: __init__.py  app.py  (+17 more)
(+1459 files in other folders)
