[metadata]
name = startleft
description = Parse Infrastructure as Code files to the Open Threat Model format and upload them to IriusRisk
license = Apache2
author = Fraser Scott
author_email = fscott@iriusrisk.com
url = https://github.com/iriusrisk/startleft
keywords = threat modeling, cyber security, appsec
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        Topic :: Security
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
    pyyaml
    jsonschema
    deepmerge
    jmespath
    lxml
    python-hcl2
    requests
    xmltodict
    setuptools_scm
    fastapi
    python-multipart
    click
    uvicorn
    setuptools_scm

[options.extras_require]
test =
    tox
    pytest
    responses

[options.entry_points]
console_scripts =
    startleft=startleft.cli:cli

[aliases]
test = pytest
